<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="voice_search"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_voice_search"
        android:shortcutShortLabel="@string/shortcut_voice_search_short_label"
        android:shortcutLongLabel="@string/shortcut_voice_search_long_label"
        android:shortcutDisabledMessage="@string/shortcut_voice_search_disabled_message">
        <intent
            android:action="com.tk.quicksearch.action.VOICE_SEARCH_SHORTCUT"
            android:targetClass="com.tk.quicksearch.app.MainActivity" />
    </shortcut>
    <shortcut
        android:shortcutId="manage_apps"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_manage_apps"
        android:shortcutShortLabel="@string/settings_manage_apps_title">
        <intent
            android:action="com.tk.quicksearch.action.OPEN_MANAGE_APPS"
            android:targetClass="com.tk.quicksearch.app.MainActivity" />
    </shortcut>
    <shortcut
        android:shortcutId="widgets"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_widgets"
        android:shortcutShortLabel="@string/widgets_panel_title">
        <intent
            android:action="com.tk.quicksearch.action.OPEN_WIDGETS_PANEL"
            android:targetClass="com.tk.quicksearch.app.MainActivity" />
    </shortcut>
    <shortcut
        android:shortcutId="notification_history"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_notification_history"
        android:shortcutShortLabel="@string/settings_shortcut_notification_history">
        <intent
            android:action="com.tk.quicksearch.action.OPEN_NOTIFICATION_HISTORY"
            android:targetClass="com.tk.quicksearch.app.MainActivity" />
    </shortcut>
</shortcuts>
